syntax = "proto3";

package proto;

option go_package = "server/proto";

import "google/api/annotations.proto";

service Auth {
    // Account action signup.
    rpc ActionSignup (RequestAuth) returns (ResponseAuth) {
        option (google.api.http) = {
            post: "/v2/auth/action-signup"
            body: "*"
        };
    }
    // Account action signin.
    rpc ActionSignin (RequestAuth) returns (ResponseAuth) {
        option (google.api.http) = {
            post: "/v2/auth/action-signin"
            body: "*"
        };
    }
    // Account action reset.
    rpc ActionReset (RequestAuth) returns (ResponseAuth) {
        option (google.api.http) = {
            post: "/v2/auth/action-reset"
            body: "*"
        };
    }
    // Account set logout.
    rpc SetLogout (RequestAuth) returns (ResponseAuth) {
        option (google.api.http) = {
            post: "/v2/auth/set-logout"
            body: "*"
        };
    }
    // Account get refresh.
    rpc GetRefresh (RequestAuth) returns (ResponseAuth) {
        option (google.api.http) = {
            post: "/v2/auth/get-refresh"
            body: "*"
        };
    }
}

enum Signup {
    ActionSignupAccount = 0;
    ActionSignupCode = 1;
    ActionSignupConfirm = 2;
}

enum Signin {
    ActionSigninAccount = 0;
    ActionSigninCode = 1;
    ActionSigninConfirm = 2;
}

enum Reset {
    ActionResetAccount = 0;
    ActionResetCode = 1;
    ActionResetConfirm = 2;
    ActionResetPassword = 3;
}

message RequestAuth {
    string email = 1;
    string name = 2;
    string password = 3;
    string secure = 4;
    string refresh = 5;
    Signup signup = 6;
    Signin signin = 7;
    Reset reset = 8;
}

message ResponseAuth {
    int64 id = 1;
    string access_token = 2;
    string refresh_token = 3;
    message Session {
        string access_token = 1;
        int64 subject = 2;
    }
}